pushgateway/_kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-pushgateway
  namespace: devops
  labels:
    app: prometheus-pushgateway
spec:
  ports:
    - name: web
      port: 9091
  selector:
    app: prometheus-pushgateway
