pushgateway/_kube/ingress.yaml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-pushgateway
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-pushgateway.demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-pushgateway
          servicePort: 9091
